# test

./: README.md  pyproject.toml  tts_cir_action_plan.md
configs/: hf_assets.json
configs/baselines/: wiser_2602_23029.yaml
data/: candidates.jsonl  queries.jsonl
docs/: experiment_status.md
scripts/: download_hf_assets.py  run_hf_scaling.py  run_mvp.py  run_wiser_baseline.py
src/tts_cir/: __init__.py  budget.py  config.py  hf_pipeline.py  llm_client.py  metrics.py  retrieval.py  runner.py  sampling.py  scoring.py  setup_llm.py  vector_ops.py  verifier.py
src/tts_cir/baselines/: __init__.py  wiser_like.py
tests/: test_hf_pipeline_import.py  test_sampling_and_stats.py  test_scoring_and_metrics.py  test_wiser_baseline.py
